--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/images/apple_logo.jpg" />
+    <link rel="icon" href="logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Angkor&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="https://getwallpapers.com/wallpaper/full/1/a/b/878408-fashion-desktop-backgrounds-1920x1080-for-android.jpg" />
+
+
+    <link rel="apple-touch-icon" href="../src/images/apple_logo.jpg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- Bootstrap CSS -->
