--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Angkor&display=swap" rel="stylesheet">
 
 
-    <link rel="apple-touch-icon" href="../src/images/apple_logo.jpg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="apple-touch-icon" href="https://getwallpapers.com/wallpaper/full/1/a/b/878408-fashion-desktop-backgrounds-1920x1080-for-android.jpg" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
